[package]
name = "stdfuzzer"
version = "0.13.1"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "6" }
num_cpus = "1.0"

[dependencies]
libafl = "0.13.1"
libafl_bolts = "0.13.1"
libafl_targets = { version = "0.13.1", features = ["sancov_pcguard_hitcounts", "sancov_cmplog", "libfuzzer"] }
# TODO Include it only when building cc
libafl_cc = "0.13.1"
mimalloc = { version = "*", default-features = false }
clap = { version = "4.5", features = ["derive"] }

[lib]
name = "stdfuzzer"
crate-type = ["staticlib"]
